# near-bevy

./: Cargo.toml
src/: components.rs  main.rs  near_plugin.rs  systems.rs  workspaces.rs
